--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Code generation library using handlebars",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -14,12 +14,16 @@
     "codegeneration",
     "handlebars"
   ],
-  "author": "le99",
+  "author": "le999",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/le99/codegen-js/issues"
   },
   "homepage": "https://github.com/le99/codegen-js#readme",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.1.3"
+  },
   "dependencies": {
     "handlebars": "^4.7.6"
   }
