--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mocha": "^8.1.3"
   },
   "dependencies": {
-    "handlebars": "^4.7.6"
+    "handlebars": "^4.7.6",
+    "ncp": "^2.0.0"
   }
 }
